style-mobile.css
body {
    color: white;
    font-family: 'Work Sans', sans-serif;
    text-align: center;
    margin: 0;
    font-size: 50px;
}
.logo {
    background-image: url('/w-background.jpg');
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
.logo img {
    width: 100%;
    height: auto;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: 2.5px;
    margin-right: 2.5px;

}
.logo a {
text-decoration: none;
}
.info {
    margin-top: 50px;
}
.tabs {
    color: white;
    background-color: rgb(247, 150, 70);
    line-height: 130px;
}
.tabs a {
    display: block;
    color: white;
    text-decoration: none;
    transition: 0.4s;
}
.tabs a:hover {
    display: block;
    color: white;
    text-decoration: none;
}
.tabs h3 {
    margin: 0;
    font-size: 100px;
}
.tabs span {
    color: rgb(1, 255, 174);
}
.content {
    background-color: rgb(228, 108, 10);
    margin-top: 0;
    padding-top: 10px;
    padding-bottom: 50px;
}
.content a {
    color: white;
    text-decoration: none;
}
#extlink {
    text-decoration: underline;
}
.websites-mobile div {
    margin-top: 100px;
}
.websites-mobile img {
    width: 100%;
}
.iframe {
    width: 95%;
    height: auto;
}
#backtotop {
    position: fixed;
    bottom: 0;
    width: 100%;
    margin: 0;
    background-color: rgb(247, 150, 70);
    padding: 3px;
    text-decoration: none;
}
.projects-desktop {
    display: none;
}
.websites-desktop {
    display: none;
}
#quicklinks-desktop {
  display: none;
}
#projects-mobile a {
    text-decoration: underline;
}
#websites-mobile a {
    text-decoration: underline;
}
ul {
    list-style: none;
    margin-bottom: 100px;
    width: auto;
    background: linear-gradient( rgba(247,150,70,0.1), rgba(247,150,70,1) );
    padding: 40px;
    border-bottom: 1.5px #797979 solid;
    border-top: 1.5px #797979 solid;
}
h4 {
    padding-left: 50px;
    padding-right: 50px;
}
.designs-desktop {
    display: none;
}

